<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@drawable/gradient_header"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.auth.SignUpActivity">
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_12sdp"
        android:padding="@dimen/_6sdp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_registration_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_12sdp"
        android:fontFamily="@font/gilroy_bold"
        android:padding="@dimen/_4sdp"
        android:text="Registration"
        android:textColor="@color/white"
        android:textSize="@dimen/_18sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_back" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_12sdp"
        android:background="@drawable/card_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_registration_title">



        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/btn_next"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_alignParentTop="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <!--Basic Information-->
                <LinearLayout
                    android:id="@+id/ll_basic_info"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:orientation="vertical"
                    android:visibility="visible">


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_company_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tie_company_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/edit_text_background"
                            android:fontFamily="@font/gilroy_medium"
                            android:hint="@string/company_name"
                            android:inputType="textPersonName" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_owner_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_12sdp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tie_owner_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/edit_text_background"
                            android:fontFamily="@font/gilroy_medium"
                            android:hint="@string/owner_name"
                            android:inputType="textPersonName" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_company_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_12sdp"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        app:endIconDrawable="@drawable/ic_down"
                        app:endIconMode="custom">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tie_company_type"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/edit_text_background"
                            android:focusable="false"
                            android:focusableInTouchMode="false"
                            android:fontFamily="@font/gilroy_medium"
                            android:hint="@string/company_type"
                            android:inputType="textPersonName" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_business_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_12sdp"
                        android:focusable="false"
                        android:layout_marginBottom="@dimen/_6sdp"
                        android:focusableInTouchMode="false"
                        app:endIconDrawable="@drawable/ic_down"
                        app:endIconMode="custom">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tie_business_type"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/edit_text_background"
                            android:focusable="false"
                            android:focusableInTouchMode="false"
                            android:fontFamily="@font/gilroy_medium"
                            android:hint="Business Type"
                            android:inputType="textPersonName" />
                    </com.google.android.material.textfield.TextInputLayout>







                </LinearLayout>
                <!--End Of Basic Information-->

            </RelativeLayout>

        </ScrollView>


        <Button
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/_12sdp"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:backgroundTint="@color/colorTextPrimary"
            android:fontFamily="@font/gilroy_semi_bold"
            android:text="Submit"
            android:textAllCaps="false"
            android:textColor="@color/colorButtonText"
            android:textSize="16dp" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>